--- a/DotNet8WebApi.HangfireApp/appsettings.json
+++ b/DotNet8WebApi.HangfireApp/appsettings.json
@@ -2,8 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Hangfire": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnection": "Server=.;Database=TestDb;User ID=sa;Password=sa@123;Trust Server Certificate=True;"
+  }
 }
