--- a/DotNet8WebApi.HangfireApp/appsettings.json
+++ b/DotNet8WebApi.HangfireApp/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Server=.;Database=TestDb;User ID=sa;Password=sa@123;Trust Server Certificate=True;"
+    "DbConnection": "Server=.;Database=TestDb;User ID=sa;Password=sasa@123;Trust Server Certificate=True;"
    // "DbConnection": "Server=.,1444;Database=TestDb;User ID=sa;Password=acesa@123;Trust Server Certificate=True;"
   }
 }
